# Pixnib

./: README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color_picker.rs  lib.rs  storage.rs
src/components/: CodeSnippets.tsx  ColorHistory.tsx  ContrastChecker.tsx  Loupe.tsx  Onboarding.tsx  Palettes.tsx  Region.tsx  Settings.tsx  ShadeStrip.tsx  Themes.tsx  UpdatePrompt.tsx
src/data/: palettes.ts
src/hooks/: usePalettes.ts
src/types/: color.ts
src/utils/: codeFormats.ts  paletteExport.ts  themePalettes.ts
